<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".features.payment.PaymentActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPaymentTotalAmount"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginTop="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:hint="@string/payment_total_amount"
            app:layout_constraintBottom_toTopOf="@+id/tilPaymentInitialValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPaymentInitialValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tilPaymentTotalAmount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tilPaymentQuantity"
            android:layout_marginTop="@dimen/defaultMargin"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:hint="@string/payment_initial_value"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPaymentQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tilPaymentInitialValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tilPaymentDepositValue"
            android:layout_marginTop="@dimen/defaultMargin"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:hint="@string/payment_quantity_payments"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPaymentDepositValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tilPaymentQuantity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/mtvPaymentLabelValuePerMonth"
            android:layout_marginTop="@dimen/defaultMargin"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:hint="@string/payment_deposit_value"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:enabled="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvPaymentLabelValuePerMonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/xlargeMargin"
            android:gravity="center_horizontal"
            android:text="@string/payment_label_value_per_month"
            android:textAlignment="center"
            android:textSize="@dimen/default_subtitle_size"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tilPaymentDepositValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/mtvPaymentValuePerMonth" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvPaymentValuePerMonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginTop="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="@dimen/default_subtitle_size"
            app:layout_constraintTop_toBottomOf="@+id/mtvPaymentLabelValuePerMonth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:text="R$1500,00" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbPaymentSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/defaultMargin"
            android:text="@string/payment_save"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/mtvPaymentValuePerMonth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>